This file documents the major additions and syntax changes between releases.

1.4.12 or 1.5 ??
	Added ./check_nt -v INSTANCES to count number of instances (Alessandro Ren)
	check_tcp now returns UNKNOWN with invalid hostname
	New check_icmp -s option to specify the source IP address
	check_dns now sorts addresses for testing results for more than one returned IP (Matthias Urlichs)

1.4.11 13th December 2007
	Fixed check_http regression in 1.4.10 where following redirects to
	  relative URLs on virtual hosts failed if both "-H" and "-I" were used
	Merged two new checks that deprecates check_ntp: check_ntp_peer and check_ntp_time.
	  You should read the --help output so see which one is suitable for you. check_ntp_peer
	  implement stratum thresholds support (feature request #1703823).
	check_ntp now returns UNKNOWN instead of WARNING if jitter is unavailable (jitter=-1.000000)
	  as long as the thresholds range include -1. If no offset threshold is specified
	  and the offset is unavailable, will return UNKNOWN as well.
	  NOTE: If jitter thresholds are specified as integers it will return CRITICAL if jitter
	  is "-1" as the default range starts at 0. See Examples in --help output.
	Fixed broken usage2 in check_snmp and check_cluster
	check_cluster now accepts all valid characters in its thresholds ("-", "@", "~")
	Fixed check_disk reporting OK if disk usage grows over 100% (bug #1348746).
	  The problem happens to be in Gnulib but a workaround have been implemented in check_disk.c
	Fixed check_load argument handling when not passing triplets (bug #1831890)
	Fixed buffer overflow in check_snmp (CVE-2007-5623)
	Tinderbox builds now runs tests in a verbose mode
	Updated Nagios::Plugin to 0.22
	VPATH problem fixed for compiling plugins-root

1.4.10 28th September 2007
	Fix check_http buffer overflow vulnerability when following HTTP redirects
	check_http now explicitly asks HTTP/1.1 servers to close the connection
	  after completion of the response