@@ -5,6 +5,7 @@ This file documents the major additions and syntax changes between releases.
 	check_tcp now returns UNKNOWN with invalid hostname
 	New check_icmp -s option to specify the source IP address
 	check_dns now sorts addresses for testing results for more than one returned IP (Matthias Urlichs)
+	Fix segfault in check_ntp_time and (deprecated) check_ntp. (Bug #1862300)
 
 1.4.11 13th December 2007
 	Fixed check_http regression in 1.4.10 where following redirects to
